--- a/ex01/mendeleiev.html
+++ b/ex01/mendeleiev.html
@@ -1,37 +1,38 @@
 <html>
 	<head>
 		<style>
-table {
+body {
+	background-image: url("dmitri.jpg");
+}
+
+table
+{
+	padding: 0px;
 	border-collapse: collapse;
+	table-layout: fixed;
 	text-align: left;
+	margin: auto;
+}
+
+td
+{
+	height: 70px;
+	width: 70px;
+	border: 1px solid #000;
 	padding: 2px;
-	height: 10px;
-	width: 10px;
-}
-
-td:hover, td.selected {
-	background-color: #FFCF8B
-}
-
-table th {
+	empty-cells: show;
 	border: 1px solid black;
-	text-align: center;
-	background-color: #008080;
-	border-collapse: collapse;
-}
-
-table td {
-	border: 1px solid black;
-	padding: 20px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+	position: relative;
 }
 
-#container {
-	width: 590px;
-	background-color: white;
-
+td div
+{
+	height: 70px;
+	width: 70px;
+	overflow: hidden;
 }
 
 #t {
@@ -41,9 +42,19 @@ table td {
 
 }
 
+table tr th {
+	border: 1px solid black;
+	text-align: center;
+	background-color: #008080;
+	border-collapse: collapse;
+	width: 15px;
+	height: 15px;
+	margin: 10px;
+}
+
 #b {
 	text-align: left;
-	font-size: 6px;
+	font-size: 12px;
 }
 
 #ba {
@@ -54,12 +65,7 @@ tr #aD, #aE, #aF, #aG {
 	background-color: #FFFF00;
 }
 
-#aH {
-	visibility: hidden;
-}
-
-
-#ja, #jb, #jc, #ka, #kb, #kc {
+#aH, #ja, #jb, #jc, #ka, #kb, #kc {
 	visibility: hidden;
 }
 
@@ -68,15 +74,51 @@ tr #aD, #aE, #aF, #aG {
 	background-color: 	#FF8C00;
 }
 
-#bb, #bc, #bd, #bd, #be, #bf, #bg, #bh, #bi, #bj, #bk, #bl, #bm, #bn, #bo, #bp, #bq, #cc, #cd, #cd, #ce, #cf, #cg, #ch, #ci, #cj, #ck{
+td:hover, td.selected {
+	background-color: #FFCF8B
+}
+
+#bb, #bc, #bd, #bd, #be, #bf, #bg, #bh, #bi, #bj, #bk, #bl, #bm, #bn, #bo, #bp, #bq, #cc, #cd, #cd, #ce, #cf, #cg, #ch, #ci, #cj, #ck {
 	visibility: hidden;
 }
+   h3 {
+	   text-align: center;
+	   font-size: 13;
+   }
+   p {
+	   font-size: 15;
+
+   }
+   /*
+	  table {
+		  border-collapse: collapse;
+		  margin-left: auto;
+		  margin-right: auto;
+		  text-align: left;
+		  padding: 2px;
+		  height: 10px;
+		  width: 10px;
+	  }
+
+	  table th {
+		  border: 1px solid black;
+		  text-align: center;
+		  background-color: #008080;
+		  border-collapse: collapse;
+	  }
+	*/
+   /*
+	* {
+		border: red 1px solid;	
+
+	}
+	*/
 		</style>
 	</head>
 
 	<body>
 		<div id="container">
-			<table width="">
+			<table>
 				<th>1</th>
 				<th>2</th>
 				<th>3</th>
