Done all table elements properly filled out

--- a/ex01/mendeleiev.html
+++ b/ex01/mendeleiev.html
@@ -111,9 +111,6 @@ table tr th {
 	background-color: #ffb3cc;
 }
 
-td:hover, td.selected {
-	background-color: #FFCF8B
-}
 /*hide everything in the middle*/
 #gc, #hc, #dc, #dd, #de, #df, #dg, #dh, #di, #dj, #dk, #dl{
 	visibility: hidden;
@@ -144,6 +141,11 @@ h1 {
 	text-align: center;
 	font-size: 75;
 }
+
+td:hover, td.selected {
+	background-color: #FFCF8B
+}
+
 		</style>
 	</head>
 
@@ -1204,166 +1206,166 @@ h1 {
 					</td>
 					<td id="gd">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">178.49</pre>
 							<h3>
-								H
+								Hf
 							</h3>
 							<p id="b">
-							1
+							72
 							</p>
 						</div>
 					</td>
 					<td id="ge">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">180.95</pre>
 							<h3>
-								H
+								Ta
 							</h3>
 							<p id="b">
-							1
+							73
 							</p>
 						</div>
 					</td>
 					<td id="gf">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">183.84</pre>
 							<h3>
-								H
+								W
 							</h3>
 							<p id="b">
-							1
+							74
 							</p>
 						</div>
 					</td>
 					<td id="gg">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">186.21</pre>
 							<h3>
-								H
+								Re
 							</h3>
 							<p id="b">
-							1
+							75
 							</p>
 						</div>
 					</td>
 					<td id="gh">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">190.23</pre>
 							<h3>
-								H
+								Os
 							</h3>
 							<p id="b">
-							1
+							76
 							</p>
 						</div>
 					</td>
 					<td id="gi">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">192.22</pre>
 							<h3>
-								H
+								Ir
 							</h3>
 							<p id="b">
-							1
+							77
 							</p>
 						</div>
 					</td>
 					<td id="gj">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">195.08</pre>
 							<h3>
-								H
+								Pt
 							</h3>
 							<p id="b">
-							1
+							78
 							</p>
 						</div>
 					</td>
 					<td id="gk">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">196.97</pre>
 							<h3>
-								H
+								Au
 							</h3>
 							<p id="b">
-							1
+							79
 							</p>
 						</div>
 					</td>
 					<td id="gl">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">200.59</pre>
 							<h3>
-								H
+								Hg
 							</h3>
 							<p id="b">
-							1
+							80
 							</p>
 						</div>
 					</td>
 					<td id="gm">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">204.38</pre>
 							<h3>
-								H
+								Tl
 							</h3>
 							<p id="b">
-							1
+							81
 							</p>
 						</div>
 					</td>
 					<td id="gn">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">207.2</pre>
 							<h3>
-								H
+								Pb
 							</h3>
 							<p id="b">
-							1
+							82
 							</p>
 						</div>
 					</td>
 					<td id="go">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">208.98</pre>
 							<h3>
-								H
+								Bi
 							</h3>
 							<p id="b">
-							1
+							83
 							</p>
 						</div>
 					</td>
 					<td id="gp">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">209</pre>
 							<h3>
-								H
+								Po
 							</h3>
 							<p id="b">
-							1
+							84
 							</p>
 						</div>
 					</td>
 					<td id="gq">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">210</pre>
 							<h3>
-								H
+								At
 							</h3>
 							<p id="b">
-							1
+							85
 							</p>
 						</div>
 					</td>
 					<td id="gr">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">222</pre>
 							<h3>
-								H
+								Rn
 							</h3>
 							<p id="b">
-							1
+							86
 							</p>
 						</div>
 					</td>
@@ -1404,166 +1406,166 @@ h1 {
 					</td>
 					<td id="hd">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">267</pre>
 							<h3>
-								H
+								Rf
 							</h3>
 							<p id="b">
-							1
+							104
 							</p>
 						</div>
 					</td>
 					<td id="he">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">268</pre>
 							<h3>
-								H
+								Db
 							</h3>
 							<p id="b">
-							1
+							105
 							</p>
 						</div>
 					</td>
 					<td id="hf">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">269</pre>
 							<h3>
-								H
+								Sg
 							</h3>
 							<p id="b">
-							1
+							106
 							</p>
 						</div>
 					</td>
 					<td id="hg">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">270</pre>
 							<h3>
-								H
+								Bh
 							</h3>
 							<p id="b">
-							1
+							107
 							</p>
 						</div>
 					</td>
 					<td id="hh">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">277</pre>
 							<h3>
-								H
+								Hs
 							</h3>
 							<p id="b">
-							1
+							108
 							</p>
 						</div>
 					</td>
 					<td id="hi">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">278</pre>
 							<h3>
-								H
+								Mt
 							</h3>
 							<p id="b">
-							1
+							109
 							</p>
 						</div>
 					</td>
 					<td id="hj">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">281</pre>
 							<h3>
-								H
+								Ds
 							</h3>
 							<p id="b">
-							1
+							110
 							</p>
 						</div>
 					</td>
 					<td id="hk">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">282</pre>
 							<h3>
-								H
+								Rg
 							</h3>
 							<p id="b">
-							1
+							111
 							</p>
 						</div>
 					</td>
 					<td id="hl">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">285</pre>
 							<h3>
-								H
+								Cn
 							</h3>
 							<p id="b">
-							1
+							112
 							</p>
 						</div>
 					</td>
 					<td id="hm">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">286</pre>
 							<h3>
-								H
+								Nh
 							</h3>
 							<p id="b">
-							1
+							113
 							</p>
 						</div>
 					</td>
 					<td id="hn">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">289</pre>
 							<h3>
-								H
+								Fl
 							</h3>
 							<p id="b">
-							1
+							114
 							</p>
 						</div>
 					</td>
 					<td id="ho">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">290</pre>
 							<h3>
-								H
+								Mc
 							</h3>
 							<p id="b">
-							1
+							115
 							</p>
 						</div>
 					</td>
 					<td id="hp">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">293</pre>
 							<h3>
-								H
+								Lv
 							</h3>
 							<p id="b">
-							1
+							116
 							</p>
 						</div>
 					</td>
 					<td id="hq">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">294</pre>
 							<h3>
-								H
+								Ts
 							</h3>
 							<p id="b">
-							1
+							117
 							</p>
 						</div>
 					</td>
 					<td id="hr">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">294</pre>
 							<h3>
-								H
+								Og
 							</h3>
 							<p id="b">
-							1
+							118
 							</p>
 						</div>
 					</td>
@@ -1602,11 +1604,11 @@ h1 {
 							</p>
 						</div>
 					</td>
-					<td id="id">
+					<td >
 						<div>
 							<pre id="t">1.008</pre>
 							<h3>
-								H
+								La
 							</h3>
 							<p id="b">
 							1
@@ -1617,10 +1619,10 @@ h1 {
 						<div>
 							<pre id="t">1.008</pre>
 							<h3>
-								H
+								Haaa
 							</h3>
 							<p id="b">
-							1
+							1000
 							</p>
 						</div>
 					</td>
@@ -1805,166 +1807,166 @@ h1 {
 					</td>
 					<td id="jd">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">138.91</pre>
 							<h3>
-								H
+								La
 							</h3>
 							<p id="b">
-							1
+							57
 							</p>
 						</div>
 					</td>
 					<td id="je">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">140.12</pre>
 							<h3>
-								H
+								Ce
 							</h3>
 							<p id="b">
-							1
+							58
 							</p>
 						</div>
 					</td>
 					<td id="jf">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">140.91</pre>
 							<h3>
-								H
+								Pr
 							</h3>
 							<p id="b">
-							1
+							59
 							</p>
 						</div>
 					</td>
 					<td id="jg">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">144.24</pre>
 							<h3>
-								H
+								Nd
 							</h3>
 							<p id="b">
-							1
+							60
 							</p>
 						</div>
 					</td>
 					<td id="jh">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">145</pre>
 							<h3>
-								H
+								Pm
 							</h3>
 							<p id="b">
-							1
+							61
 							</p>
 						</div>
 					</td>
 					<td id="ji">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">150.36</pre>
 							<h3>
-								H
+								Sm
 							</h3>
 							<p id="b">
-							1
+							62
 							</p>
 						</div>
 					</td>
 					<td id="jj">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">151.96</pre>
 							<h3>
-								H
+								Eu
 							</h3>
 							<p id="b">
-							1
+							63
 							</p>
 						</div>
 					</td>
 					<td id="jk">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">157.25</pre>
 							<h3>
-								H
+								Gd
 							</h3>
 							<p id="b">
-							1
+							64
 							</p>
 						</div>
 					</td>
 					<td id="jl">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">158.93</pre>
 							<h3>
-								H
+								Tb
 							</h3>
 							<p id="b">
-							1
+							65
 							</p>
 						</div>
 					</td>
 					<td id="jm">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">162.50</pre>
 							<h3>
-								H
+								Dy
 							</h3>
 							<p id="b">
-							1
+							66
 							</p>
 						</div>
 					</td>
 					<td id="jn">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">164.93</pre>
 							<h3>
-								H
+								Ho
 							</h3>
 							<p id="b">
-							1
+							67
 							</p>
 						</div>
 					</td>
 					<td id="jo">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">167.26</pre>
 							<h3>
-								H
+								Er
 							</h3>
 							<p id="b">
-							1
+							68
 							</p>
 						</div>
 					</td>
 					<td id="jp">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">168.93</pre>
 							<h3>
-								H
+								Tm
 							</h3>
 							<p id="b">
-							1
+							69
 							</p>
 						</div>
 					</td>
 					<td id="jq">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">173.05</pre>
 							<h3>
-								H
+								Yb
 							</h3>
 							<p id="b">
-							1
+							70
 							</p>
 						</div>
 					</td>
 					<td id="jr">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">174.97</pre>
 							<h3>
-								H
+								Lu
 							</h3>
 							<p id="b">
-							1
+							71
 							</p>
 						</div>
 					</td>
@@ -2007,164 +2009,162 @@ h1 {
 						<div>
 							<pre id="t">1.008</pre>
 							<h3>
-								H
+								Ac
 							</h3>
 							<p id="b">
-							1
+							89
 							</p>
 						</div>
 					</td>
 					<td id="ke">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">227</pre>
 							<h3>
-								H
+								Th
 							</h3>
 							<p id="b">
-							1
-							</p>
+										90
+				</p>
 						</div>
 					</td>
 					<td id="kf">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">232.04</pre>
 							<h3>
-								H
+								Pa
 							</h3>
-							<p id="b">
-							1
-							</p>
+							<p id="b">91</p>
 						</div>
 					</td>
 					<td id="kg">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">231.04</pre>
 							<h3>
-								H
+								U
 							</h3>
 							<p id="b">
-							1
+							92
 							</p>
 						</div>
 					</td>
 					<td id="kh">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">238.03</pre>
 							<h3>
-								H
+								Np
 							</h3>
 							<p id="b">
-							1
+							93
 							</p>
 						</div>
 					</td>
 					<td id="ki">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">237</pre>
 							<h3>
-								H
+								Pu
 							</h3>
 							<p id="b">
-							1
+							94
 							</p>
 						</div>
 					</td>
 					<td id="kj">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">243</pre>
 							<h3>
-								H
+								Am
 							</h3>
 							<p id="b">
-							1
+							95
 							</p>
 						</div>
 					</td>
 					<td id="kk">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">247</pre>
 							<h3>
-								H
+								Cm
 							</h3>
 							<p id="b">
-							1
+							96
 							</p>
 						</div>
 					</td>
 					<td id="kl">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">247</pre>
 							<h3>
-								H
+								Bk
 							</h3>
 							<p id="b">
-							1
+							97
 							</p>
 						</div>
 					</td>
 					<td id="km">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">251</pre>
 							<h3>
-								H
+								Cf
 							</h3>
 							<p id="b">
-							1
+							98
 							</p>
 						</div>
 					</td>
 					<td id="kn">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">252</pre>
 							<h3>
-								H
+								Es
 							</h3>
 							<p id="b">
-							1
+							99
 							</p>
 						</div>
 					</td>
 					<td id="ko">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">257</pre>
 							<h3>
-								H
+								Fm
 							</h3>
 							<p id="b">
-							1
+							100
 							</p>
 						</div>
 					</td>
 					<td id="kp">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">258</pre>
 							<h3>
-								H
+								Md
 							</h3>
 							<p id="b">
-							1
+							101
 							</p>
 						</div>
 					</td>
 					<td id="kq">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">259</pre>
 							<h3>
-								H
+								No
 							</h3>
 							<p id="b">
-							1
+							102
 							</p>
 						</div>
 					</td>
 					<td id="kr">
 						<div>
-							<pre id="t">1.008</pre>
+							<pre id="t">266</pre>
 							<h3>
-								H
+								Lr
 							</h3>
 							<p id="b">
-							1
+							103
 							</p>
 						</div>
 					</td>
