final touches to header

--- a/ex01/mendeleiev.html
+++ b/ex01/mendeleiev.html
@@ -139,7 +139,8 @@ p {
 
 h1 {
 	text-align: center;
-	font-size: 75;
+	font-size: 60;
+		padding: 20px;
 }
 
 td:hover, td.selected {
@@ -150,7 +151,7 @@ td:hover, td.selected {
 	</head>
 
 	<body>
-		<h1><span id="rainbow">Ft_PeriodicTable</span></h1>
+		<h1><span id="rainbow">Periodic Table of Elements</span></h1>
 		<div id="container">
 			<table>
 				<th>1</th>
