--- a/ex00/basics.html
+++ b/ex00/basics.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
+
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
+
 	</head>
 
 	<body>
-
 		<div id="container">
 
-			<div id="header" class="hi">
+			<div id="header">
 				<h1>&#10037;Welcome to the &AElig;ternal web&#10037;</h1>
 			</div>
 
 			<div id="content">
 				<div id="nav">
-					<h2>Basics</h2>
+					<h3>Basics</h3>
 					<ul>
-						<li>ex00</li>
-						<li>html</li>
-						<li>css</li>
+						<li>i1</li>
+						<li>i2</li>
+						<li>i3</li>
 					</ul>
+
 				</div>
 				<div id="main">
-					<div id="shop1">
+					<div id="shop1" class="column">
 						<img id="google" src="img/gif-final.gif"></img>
-						<a href="https://store.google.com/us/">Google Shop</a>
 					</div>
-		
-					<div id="shop2">
+
+					<div id="shop2" class="column">
 						<img id="ebay" src="img/2000px-EBay_logo.svg.png"></img>
-						<a href="https://www.ebay.com">Ebay</a>
 					</div>
 				</div>
 
+				<div id="shop-link">
+					<p>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://store.google.com/us/">Google Shop</a>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://www.ebay.com">Ebay</a>
+					</p>
+				</div>
+
+				<hr>
+
+				<div id="footer">
+					<p id="copyright">&#169; efriedma 2019</p>
+				</div>
 			</div>
-
-			<div id="footer">
-				<p id="copyright">&#169; efriedma 2019</p>
-			</div>
-
-		</div>
-
 	</body>
 </html>
