--- a/ex02/index.html
+++ b/ex02/index.html
@@ -225,13 +225,21 @@ body {
 			}
 			#ikea {
 				width: 400px;
-					border: 10px;
-						border-color: red;
-							position: relative;
-								float: center;
+				border: 10px;
+				border-color: red;
+				position: relative;
+				float: center;
 
 			}
-
+			#apple {
+				display: block;
+				width: 400px;
+				border-color: red;
+				position: absolute;
+				float: center;
+				right: 0px;
+				bottom: 0px;
+			}
 		</style>
 
 
@@ -241,32 +249,35 @@ body {
 		<div id="container">
 
 			<div id="header">
-				<img id="headpic" src="resources/day_of_the_42.png"></img>
-				<img id="mglass" src="resources/loupe.png"></img>
-				<a href="http://www.disney.com"><img id="reload" src="resources/reload.png"></img></a>
-				<a href="http://www.relaischateaux.com"><img id="close" src="resources/close.gif"></img></a>
+				<img id="headpic" src="resources/day_of_the_42.png" title="day of 42"></img>
+				<img id="mglass" src="resources/loupe.png" title="glass"></img>
+				<a href="http://www.disney.com"><img id="reload" src="resources/reload.png" title="reload"></img></a>
+				<a href="http://www.relaischateaux.com"><img id="close" src="resources/close.gif" title="close"></img></a>
 			</div>
 
 			<br>
 			<div id="leftbar">
-				<img id="arrow" src="resources/arrow.png"></img>
-				<img id="hand" src="resources/main.png"></img>
-				<img id="oeil" src="resources/oeil.png"></img>
-				<img id="outil" src="resources/outil.png"></img>
-				<img id="chaticon" src="resources/chat-icon.png"></img>
+				<img id="arrow" src="resources/arrow.png" title="arrow"></img>
+				<img id="hand" src="resources/main.png" title="hand"></img>
+				<img id="oeil" src="resources/oeil.png" title="oeil"></img>
+				<img id="outil" src="resources/outil.png" title="utility"></img>
+				<img id="chaticon" src="resources/chat-icon.png" title="chatnow"></img>
 			</div>
 
 			<div id="main">
 
-				<img id="cluster" src="resources/cluster.jpg"></img>
-				<a href="https://ikea.com"><div id="ikea"></div></a>
+				<img id="cluster" src="resources/cluster.jpg" title="lab" usemap="#labmap"></img>
+				<map name="labmap">
+					<area shape="rect" coords="432,527,285,314" title="ikea" href="https://www.ikea.com">
+					<area shape="rect" coords="985,279,684,432" title="apple" href="https://www.apple.com">	
+				</map>
 
 			</div>
 
 			<div id="rightbar">
-				<img id="book" src="resources/book.png"></img>
-				<img id="towel" src="resources/towel.png"></img>
-				<div id="backimage"></div>
+				<img id="book" src="resources/book.png" title="book"></img>
+				<img id="towel" src="resources/towel.png" title="towel"></img>
+				<div id="backimage" title="brick"></div>
 
 			</div>
 
